[package]
name = "itester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.18.1" }
gio = { version = "*", features = ["v2_44"] }
gdk = { version = "*", features = ["v3_16"] }
gdk-pixbuf = { version = "*", features = ["v2_32"] }
cairo-rs = { version = "*", features = ["v1_14"] }
